// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListDriverSnapshot should render error state list driver 1`] = `
<DocumentFragment>
  <div
    class="sc-ksZaOG cNQmIU"
  >
    <p>
      Terjadi Kesalahan Saat pengambilan Data Driver.
    </p>
    <button
      class="sc-bczRLJ iyjxpd"
    >
      Coba Lagi
    </button>
  </div>
</DocumentFragment>
`;

exports[`ListDriverSnapshot should render loading state list driver 1`] = `
<DocumentFragment>
  <div
    class="sc-breuTD gNnOMM"
  >
    <div
      class="sc-evZas cVQZXf"
    />
  </div>
</DocumentFragment>
`;

exports[`ListDriverSnapshot should render normal state list driver 1`] = `
<DocumentFragment>
  <div
    class="sc-hAZoDl jsEuU"
  >
    <div
      class="sc-gsnTZi byoYPo"
    >
      <div
        class="sc-hKMtZM dfTmvn"
      >
        <div>
          <p
            class="sc-dkzDqf sc-eCYdqJ bkDjgV geixOC"
          >
            Driver ID
          </p>
          <p
            class="sc-jSMfEi eQOOWD"
          >
            userName
          </p>
        </div>
        <div
          class="sc-gKXOVf kSkZUi"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 10a2 2 0 11-4 0 2 2 0 014 0zM12 10a2 2 0 11-4 0 2 2 0 014 0zM16 12a2 2 0 100-4 2 2 0 000 4z"
            />
          </svg>
        </div>
      </div>
      <div
        class="sc-papXJ hIXhCT"
      >
        <img
          class="sc-crXcEl jjACuZ"
          src="profile_picture_url"
        />
        <div
          class="sc-jqUVSM epcwnv"
        >
          <div
            class="sc-kDDrLX UBIxm"
          >
            <p
              class="sc-dkzDqf sc-iBkjds bkDjgV fDTFxa"
            >
              Nama Driver
            </p>
            <p
              class="sc-ftvSup qzzlk"
            >
              firstName, lastName
            </p>
          </div>
          <div
            class="sc-kDDrLX UBIxm"
          >
            <p
              class="sc-dkzDqf sc-iBkjds bkDjgV fDTFxa"
            >
              Telepon
            </p>
            <p
              class="sc-ftvSup qzzlk"
            >
              098123123123
            </p>
          </div>
          <div
            class="sc-iqcoie fmUYHX"
          >
            <div
              class="sc-kDDrLX UBIxm"
            >
              <p
                class="sc-dkzDqf sc-iBkjds bkDjgV fDTFxa"
              >
                Email
              </p>
              <p
                class="sc-ftvSup qzzlk"
              >
                email@email.com
              </p>
            </div>
            <div
              class="sc-kDDrLX UBIxm"
            >
              <p
                class="sc-dkzDqf sc-iBkjds bkDjgV fDTFxa"
              >
                Tanggal Lahir
              </p>
              <p
                class="sc-ftvSup qzzlk"
              >
                12/10/1998
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
